--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /storage/*.json
 /logs/*.log
 /.spyproject/
+/__pycache__/
 /**/__pycache__/
-/**/__pycache__/*.pyc
 /server/ideas.py
 /server/ideas.MD
 /.coverage
 /.pylint.d/
-/server/.pylint.d/
+/**/.pylint.d/
 /.vscode/
