Update mp3s to opus for new 1.1.0 standard

--- a/config_sample/music.yaml
+++ b/config_sample/music.yaml
@@ -5,34 +5,34 @@
 # Start each music category with a -
 
 - category: --Deadly Life--
-  songs: 
-    - name: "BOX 15.mp3"
+  songs:
+    - name: "BOX 15.opus"
       length: 244
       source: Danganronpa 1
-    - name: "BOX 16.mp3"
+    - name: "BOX 16.opus"
       length: 331
-    - name: "Ikoroshia.mp3"
+    - name: "Ikoroshia.opus"
       length: 282
-    - name: "Ekoroshia.mp3"
+    - name: "Ekoroshia.opus"
       length: 424
-    - name: "Despair Searching.mp3"
+    - name: "Despair Searching.opus"
       length: 263
-    - name: "Hope Searching.mp3"
+    - name: "Hope Searching.opus"
       length: 501
       source: Danganronpa V3
 - category: --Class Trial--
-  songs: 
-    - name: "Trial Underground.mp3"
+  songs:
+    - name: "Trial Underground.opus"
       length: 108
-    - name: "Class Trial (Dawn Edition).mp3"
+    - name: "Class Trial (Dawn Edition).opus"
       length: 373
-    - name: "Class Trial (Odd Edition).mp3"
+    - name: "Class Trial (Odd Edition).opus"
       length: 279
 - category: --Discussion--
-  songs: 
-    - name: "Discussion -BREAK-.mp3"
+  songs:
+    - name: "Discussion -BREAK-.opus"
       length: 235
-    - name: "Discussion -HEAT UP-.mp3"
+    - name: "Discussion -HEAT UP-.opus"
       length: 253
-    - name: "Discussion -HOPE VS DESPAIR-.mp3"
+    - name: "Discussion -HOPE VS DESPAIR-.opus"
       length: 269
